@@ -3,6 +3,7 @@
 2013-01-17 Steve
 	* Adding grl command line option to NtMaker
 	* Updated default grl to Moriond version
+	* Adding missing triggers for lep-tau trigger matching: EF_e18vh_medium1, EF_mu15
 	* Tagging SusyCommon-00-00-52
 
 2013-01-16 Matt
